--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <span class="gear">S</span>
                 <h3>BLOG</h3>
             </div>
-            
+
             <nav id="menu">
                 <ul>
                     <li><a href="#">INICIO</a></li>
@@ -27,5 +27,14 @@
             </nav>
         </div>
     </header>
+
+    <!-- BANNER -->
+    <section class="wrap">
+        <section id="info">
+            <div id="banner">
+                <h1>CURSO DE DESARROLLO WEB</h1>
+            </div>
+        </section>
+    </section>
 </body>
 </html>
