--- a/index.html
+++ b/index.html
@@ -1,81 +1,220 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/supertux.png" type="favicon/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/supertux.png" type="favicon/x-icon" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Master en CSS</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- INICIO DE CABECERA -->
     <header id="header">
-        <div class="wrap">
-            <div id="logo">
-                <span class="gear">S</span>
-                <h3>BLOG</h3>
-            </div>
-
-            <nav id="menu">
-                <ul>
-                    <li><a href="#">INICIO</a></li>
-                    <li><a href="#">BLOG</a></li>
-                    <li><a href="#">FORMACION</a></li>
-                    <li><a href="#">CONTACTO</a></li>
-                </ul>
-            </nav>
+      <div class="wrap">
+        <div id="logo">
+          <span class="gear">S</span>
+          <h3>BLOG</h3>
         </div>
+
+        <nav id="menu">
+          <ul>
+            <li><a href="#">INICIO</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li><a href="#">FORMACION</a></li>
+            <li><a href="#">CONTACTO</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
-    <!-- BANNER -->
     <section class="wrap">
+      <section id="info">
+        <!-- BANNER -->
+        <div id="banner">
+          <h1>CURSO DE DESARROLLO WEB</h1>
+        </div>
 
-        <section id="info">
-            <div id="banner">
-                <h1>CURSO DE DESARROLLO WEB</h1>
+        <!-- CARDS -->
+        <div id="cards">
+          <div class="card">
+            <p class="icon">H</p>
+            <h2 class="category">Desarrollo Web</h2>
+            <p class="description">
+              Aprende los principales lenguajes para desarrollar webs
+              ¡Conviertete en un webmaster!.
+            </p>
+          </div>
+          <div class="card">
+            <p class="icon">_</p>
+            <h2 class="category">Sistemas Operativos</h2>
+            <p class="description">
+              Aprende a administrar sistemas Linux y Windows.
+            </p>
+          </div>
+          <div class="card">
+            <p class="icon">S</p>
+            <h2 class="category">Hardware</h2>
+            <p class="description">Conoce los entresijos del Hardware.</p>
+          </div>
+          <div class="card">
+            <p class="icon">u</p>
+            <h2 class="category">Redes e Internet</h2>
+            <p class="description">
+              Aprende a configurar y administrar redes informaticas y
+              servidores.
+            </p>
+          </div>
+          <div class="card">
+            <p class="icon">a</p>
+            <h2 class="category">Bases de datos</h2>
+            <p class="description">
+              Aprende a montar y administrar bases de datos.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- BARRA LATERAL -->
+      <aside id="lateral">
+        <h3>BUSCAR</h3>
+        <div id="search">
+          <form>
+            <input type="text" />
+            <input type="button" value="L" class="icon" />
+          </form>
+        </div>
+
+        <h3>LOGIN</h3>
+        <div id="login" class="aside-box">
+          <form>
+            <label id="user" class="icon">U</label>
+            <input type="email" />
+
+            <label id="password" class="icon">w</label>
+            <input type="password" />
+
+            <input type="submit" value="Entrar" />
+            <input type="reset" value="Limpiar" />
+
+            <a href="#">Registrate aqui</a>
+            <a href="#">¿Has olvidado tu contraseña?</a>
+          </form>
+        </div>
+        <h3>REDES SOCIALES</h3>
+        <div id="social" class="aside-box">
+          <div class="twitter">
+            <a href="#" class="icon">t</a>
+          </div>
+          <div class="facebook">
+            <a href="#" class="icon">f</a>
+          </div>
+          <div class="youtube">
+            <a href="#" class="icon">y</a>
+          </div>
+        </div>
+
+        <h3>PATROCINADORES</h3>
+        <div id="sponsors" class="aside-box"></div>
+      </aside>
+
+      <!-- ARTICULOS -->
+      <section id="article">
+        <h2>ULTIMOS ARTICULOS</h2>
+        <article>
+          <div class="data">
+            <span>Fecha: 12 dic</span>
+            <span>CAtegoría: Pruebas</span>
+          </div>
+          <h4>
+            <a href="#">Titulo del artículo</a>
+          </h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+            porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+            urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+            Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+          </p>
+        </article>
+        <article>
+            <div class="data">
+              <span>Fecha: 12 dic</span>
+              <span>CAtegoría: Pruebas</span>
             </div>
-
-            <div id="cards">
-
-                <div class="card">
-                    <p class="icon">H</p>
-                    <h2 class="category">Desarrollo Web</h2>
-                    <p class="description">
-                        Aprende los principales lenguajes para desarrollar webs ¡Conviertete en un webmaster!.
-                    </p>
-                </div>
-                <div class="card">
-                    <p class="icon">_</p>
-                    <h2 class="category">Sistemas Operativos</h2>
-                    <p class="description">
-                        Aprende a administrar sistemas Linux y Windows.
-                    </p>
-                </div>
-                <div class="card">
-                    <p class="icon">S</p>
-                    <h2 class="category">Hardware</h2>
-                    <p class="description">
-                        Conoce los entresijos del Hardware.
-                    </p>
-                </div>
-                <div class="card">
-                    <p class="icon">u</p>
-                    <h2 class="category">Redes e Internet</h2>
-                    <p class="description">
-                        Aprende a configurar y administrar redes informaticas y servidores.
-                    </p>
-                </div>
-                <div class="card">
-                    <p class="icon">a</p>
-                    <h2 class="category">Bases de datos</h2>
-                    <p class="description">
-                        Aprende a montar y administrar bases de datos.
-                    </p>
-                </div>
-
+            <h4>
+              <a href="#">Titulo del artículo</a>
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+              porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+              urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+              Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+            </p>
+          </article>
+          <article>
+            <div class="data">
+              <span>Fecha: 12 dic</span>
+              <span>CAtegoría: Pruebas</span>
             </div>
-        </section>
+            <h4>
+              <a href="#">Titulo del artículo</a>
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+              porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+              urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+              Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+            </p>
+          </article>
+          <article>
+            <div class="data">
+              <span>Fecha: 12 dic</span>
+              <span>CAtegoría: Pruebas</span>
+            </div>
+            <h4>
+              <a href="#">Titulo del artículo</a>
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+              porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+              urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+              Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+            </p>
+          </article>
+          <article>
+            <div class="data">
+              <span>Fecha: 12 dic</span>
+              <span>CAtegoría: Pruebas</span>
+            </div>
+            <h4>
+              <a href="#">Titulo del artículo</a>
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+              porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+              urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+              Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+            </p>
+          </article>
+          <article>
+            <div class="data">
+              <span>Fecha: 12 dic</span>
+              <span>CAtegoría: Pruebas</span>
+            </div>
+            <h4>
+              <a href="#">Titulo del artículo</a>
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+              porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+              urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+              Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+            </p>
+          </article>
+          <article id="blog">
+            <a href="#">IR AL BLOG</a>
+          </article>
+      </section>
     </section>
-</body>
+  </body>
 </html>
