--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
       </aside>
 
       <!-- ARTICULOS -->
-      <section id="article">
+      <section id="articles">
         <h2>ULTIMOS ARTICULOS</h2>
+        <div class="clearfix"></div>
         <article>
           <div class="data">
             <span>Fecha: 12 dic</span>
