Maquetacion articulos completa

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <article>
           <div class="data">
             <span>Fecha: 12 dic</span>
-            <span>CAtegoría: Pruebas</span>
+            <span>Categoría: Pruebas</span>
           </div>
           <h4>
             <a href="#">Titulo del artículo</a>
@@ -140,7 +140,7 @@
         <article>
             <div class="data">
               <span>Fecha: 12 dic</span>
-              <span>CAtegoría: Pruebas</span>
+              <span>Categoría: Pruebas</span>
             </div>
             <h4>
               <a href="#">Titulo del artículo</a>
@@ -155,7 +155,7 @@
           <article>
             <div class="data">
               <span>Fecha: 12 dic</span>
-              <span>CAtegoría: Pruebas</span>
+              <span>Categoría: Pruebas</span>
             </div>
             <h4>
               <a href="#">Titulo del artículo</a>
@@ -170,7 +170,7 @@
           <article>
             <div class="data">
               <span>Fecha: 12 dic</span>
-              <span>CAtegoría: Pruebas</span>
+              <span>Categoría: Pruebas</span>
             </div>
             <h4>
               <a href="#">Titulo del artículo</a>
@@ -185,7 +185,7 @@
           <article>
             <div class="data">
               <span>Fecha: 12 dic</span>
-              <span>CAtegoría: Pruebas</span>
+              <span>Categoría: Pruebas</span>
             </div>
             <h4>
               <a href="#">Titulo del artículo</a>
@@ -200,7 +200,7 @@
           <article>
             <div class="data">
               <span>Fecha: 12 dic</span>
-              <span>CAtegoría: Pruebas</span>
+              <span>Categoría: Pruebas</span>
             </div>
             <h4>
               <a href="#">Titulo del artículo</a>
