--- a/index.html
+++ b/index.html
@@ -1,221 +1,284 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="img/supertux.png" type="favicon/x-icon" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Master en CSS</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <!-- INICIO DE CABECERA -->
     <header id="header">
-      <div class="wrap">
-        <div id="logo">
-          <span class="gear">S</span>
-          <h3>BLOG</h3>
-        </div>
+        <div class="wrap">
+            <div id="logo">
+                <span class="gear">S</span>
+                <h3>BLOG</h3>
+            </div>
 
-        <nav id="menu">
-          <ul>
-            <li><a href="#">INICIO</a></li>
-            <li><a href="#">BLOG</a></li>
-            <li><a href="#">FORMACION</a></li>
-            <li><a href="#">CONTACTO</a></li>
-          </ul>
-        </nav>
-      </div>
+            <nav id="menu">
+                <ul>
+                    <li><a href="#">INICIO</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">FORMACION</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section class="wrap">
-      <section id="info">
-        <!-- BANNER -->
-        <div id="banner">
-          <h1>CURSO DE DESARROLLO WEB</h1>
-        </div>
-
-        <!-- CARDS -->
-        <div id="cards">
-          <div class="card">
-            <p class="icon">H</p>
-            <h2 class="category">Desarrollo Web</h2>
-            <p class="description">
-              Aprende los principales lenguajes para desarrollar webs
-              ¡Conviertete en un webmaster!.
-            </p>
-          </div>
-          <div class="card">
-            <p class="icon">_</p>
-            <h2 class="category">Sistemas Operativos</h2>
-            <p class="description">
-              Aprende a administrar sistemas Linux y Windows.
-            </p>
-          </div>
-          <div class="card">
-            <p class="icon">S</p>
-            <h2 class="category">Hardware</h2>
-            <p class="description">Conoce los entresijos del Hardware.</p>
-          </div>
-          <div class="card">
-            <p class="icon">u</p>
-            <h2 class="category">Redes e Internet</h2>
-            <p class="description">
-              Aprende a configurar y administrar redes informaticas y
-              servidores.
-            </p>
-          </div>
-          <div class="card">
-            <p class="icon">a</p>
-            <h2 class="category">Bases de datos</h2>
-            <p class="description">
-              Aprende a montar y administrar bases de datos.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- BARRA LATERAL -->
-      <aside id="lateral">
-        <h3>BUSCAR</h3>
-        <div id="search">
-          <form>
-            <input type="text" />
-            <input type="button" value="L" class="icon" />
-          </form>
-        </div>
-
-        <h3>LOGIN</h3>
-        <div id="login" class="aside-box">
-          <form>
-            <label id="user" class="icon">U</label>
-            <input type="email" />
-
-            <label id="password" class="icon">w</label>
-            <input type="password" />
-
-            <input type="submit" value="Entrar" />
-            <input type="reset" value="Limpiar" />
-
-            <a href="#">Registrate aqui</a>
-            <a href="#">¿Has olvidado tu contraseña?</a>
-          </form>
-        </div>
-        <h3>REDES SOCIALES</h3>
-        <div id="social" class="aside-box">
-          <div class="twitter">
-            <a href="#" class="icon">t</a>
-          </div>
-          <div class="facebook">
-            <a href="#" class="icon">f</a>
-          </div>
-          <div class="youtube">
-            <a href="#" class="icon">y</a>
-          </div>
-        </div>
-
-        <h3>PATROCINADORES</h3>
-        <div id="sponsors" class="aside-box"></div>
-      </aside>
-
-      <!-- ARTICULOS -->
-      <section id="articles">
-        <h2>ULTIMOS ARTICULOS</h2>
-        <div class="clearfix"></div>
-        <article>
-          <div class="data">
-            <span>Fecha: 12 dic</span>
-            <span>Categoría: Pruebas</span>
-          </div>
-          <h4>
-            <a href="#">Titulo del artículo</a>
-          </h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
-            porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
-            urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
-            Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
-          </p>
-        </article>
-        <article>
-            <div class="data">
-              <span>Fecha: 12 dic</span>
-              <span>Categoría: Pruebas</span>
+        <section id="info">
+            <!-- BANNER -->
+            <div id="banner">
+                <h1>CURSO DE DESARROLLO WEB</h1>
             </div>
-            <h4>
-              <a href="#">Titulo del artículo</a>
-            </h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
-              porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
-              urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
-              Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
-            </p>
-          </article>
-          <article>
-            <div class="data">
-              <span>Fecha: 12 dic</span>
-              <span>Categoría: Pruebas</span>
+
+            <!-- CARDS -->
+            <div id="cards">
+                <div class="card">
+                    <p class="icon">H</p>
+                    <h2 class="category">Desarrollo Web</h2>
+                    <p class="description">
+                        Aprende los principales lenguajes para desarrollar webs
+                        ¡Conviertete en un webmaster!.
+                    </p>
+                </div>
+                <div class="card">
+                    <p class="icon">_</p>
+                    <h2 class="category">Sistemas Operativos</h2>
+                    <p class="description">
+                        Aprende a administrar sistemas Linux y Windows.
+                    </p>
+                </div>
+                <div class="card">
+                    <p class="icon">S</p>
+                    <h2 class="category">Hardware</h2>
+                    <p class="description">Conoce los entresijos del Hardware.</p>
+                </div>
+                <div class="card">
+                    <p class="icon">u</p>
+                    <h2 class="category">Redes e Internet</h2>
+                    <p class="description">
+                        Aprende a configurar y administrar redes informaticas y
+                        servidores.
+                    </p>
+                </div>
+                <div class="card">
+                    <p class="icon">a</p>
+                    <h2 class="category">Bases de datos</h2>
+                    <p class="description">
+                        Aprende a montar y administrar bases de datos.
+                    </p>
+                </div>
             </div>
-            <h4>
-              <a href="#">Titulo del artículo</a>
-            </h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
-              porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
-              urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
-              Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
-            </p>
-          </article>
-          <article>
-            <div class="data">
-              <span>Fecha: 12 dic</span>
-              <span>Categoría: Pruebas</span>
+        </section>
+
+        <!-- BARRA LATERAL -->
+        <aside id="lateral">
+            <h3>BUSCAR</h3>
+            <div id="search">
+                <form>
+                    <input type="text" />
+                    <input type="button" value="L" class="icon" />
+                </form>
             </div>
-            <h4>
-              <a href="#">Titulo del artículo</a>
-            </h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
-              porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
-              urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
-              Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
-            </p>
-          </article>
-          <article>
-            <div class="data">
-              <span>Fecha: 12 dic</span>
-              <span>Categoría: Pruebas</span>
+
+            <h3>LOGIN</h3>
+            <div id="login" class="aside-box">
+                <form>
+                    <label id="user" class="icon">U</label>
+                    <input type="email" />
+
+                    <label id="password" class="icon">w</label>
+                    <input type="password" />
+
+                    <input type="submit" value="Entrar" />
+                    <input type="reset" value="Limpiar" />
+
+                    <a href="#">Registrate aqui</a>
+                    <a href="#">¿Has olvidado tu contraseña?</a>
+                </form>
             </div>
-            <h4>
-              <a href="#">Titulo del artículo</a>
-            </h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
-              porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
-              urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
-              Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
-            </p>
-          </article>
-          <article>
-            <div class="data">
-              <span>Fecha: 12 dic</span>
-              <span>Categoría: Pruebas</span>
+            <h3>REDES SOCIALES</h3>
+            <div id="social" class="aside-box">
+                <div class="twitter">
+                    <a href="#" class="icon">t</a>
+                </div>
+                <div class="facebook">
+                    <a href="#" class="icon">f</a>
+                </div>
+                <div class="youtube">
+                    <a href="#" class="icon">y</a>
+                </div>
             </div>
-            <h4>
-              <a href="#">Titulo del artículo</a>
-            </h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
-              porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
-              urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
-              Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
-            </p>
-          </article>
-          <article id="blog">
-            <a href="#">IR AL BLOG</a>
-          </article>
-      </section>
+
+            <h3>PATROCINADORES</h3>
+            <div id="sponsors" class="aside-box"></div>
+        </aside>
+
+        <!-- ARTICULOS -->
+        <section id="articles">
+            <h2>ULTIMOS ARTICULOS</h2>
+            <div class="clearfix"></div>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+                    porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+                    urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+                    Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+                    porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+                    urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+                    Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+                    porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+                    urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+                    Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+                    porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+                    urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+                    Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+                    porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+                    urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+                    Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non
+                    porta nisl. Morbi lorem urna, vulputate id lorem at, congue euismod
+                    urna. Nunc enim nisl, rutrum in magna eget, iaculis sodales tellus.
+                    Morbi efficitur sem magna, ut tristique odio consectetur iaculis.
+                </p>
+            </article>
+            <article id="blog">
+                <a href="#">IR AL BLOG</a>
+            </article>
+        </section>
     </section>
-  </body>
+
+    <!-- FOOTER -->
+    <div class="clearfix"></div>
+    <footer id="footer">
+        <div class="wrap">
+            <!--WRAP CENTRA EL CONTENIDO DE LA CAJA -->
+
+            <div id="menu_footer">
+                <h5>MENU</h5>
+                <ul>
+                    <li><a href="#">INICIO</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">FORMACIÓN</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                </ul>
+            </div>
+
+            <div id="location">
+                <h5>¿DONDE ESTAMOS?</h5>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.4047617450115!2d2.1700471!3d41.387015399999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2f1602b4819%3A0x1eecc2af1c60d64b!2sPla%C3%A7a%20de%20Catalunya!5e0!3m2!1ses!2ses!4v1660295233092!5m2!1ses!2ses"
+                    width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+            <div id="info">
+                <h5>Desarrollado con</h5>
+                <p>
+                    <img src="./img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png"
+                        alt="Creado con HTML CSS" />
+                </p>
+
+                <h5>Optimizado para</h5>
+                <p id="browsers">
+                    <a href="#">
+                        <img src="./img/firefox-icon.png" alt="Firefox" title="Firefox" />
+                    </a>
+                    <a href="#">
+                        <img src="./img/chrome.png" alt="Chrome" title="Chrome" />
+                    </a>
+                    <a href="#">
+                        <img src="./img/Opera_256x256.png" alt="Firefox" title="Opera" />
+                    </a>
+                    <a href="#">
+                        <img src="./img/safari.png" alt="Safari" title="Safari" />
+                    </a>
+                    <a href="#">
+                        <img src="./img/android.png" alt="Android" title="Android" />
+                    </a>
+                    <a href="#">
+                        <img src="./img/ios.png" alt="Apple" title="Apple" />
+                    </a>
+                </p>
+
+                <h5>AUTOR</h5>
+                <p>&copy; Victor Robles - Curso CSS Master</p>
+                <p>Alumno: <a href="https://github.com/sebalaca">Sebastian Lacabaratz</a></p>
+            </div>
+        </div>
+    </footer>
+</body>
+
 </html>
