--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section id="info">
             <!-- BANNER -->
             <div id="banner">
-                <h1>CURSO DE DESARROLLO WEB</h1>
+                <h1>CURSO DE DESARROLLO WEB - MASTER EN CSS</h1>
             </div>
 
             <!-- CARDS -->
