web responsive first breakpoint

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <link rel="icon" href="img/supertux.png" type="favicon/x-icon" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
     <title>Master en CSS</title>
 </head>
 
@@ -78,6 +79,7 @@
         </section>
 
         <!-- BARRA LATERAL -->
+        <div class="clearfix"></div>
         <aside id="lateral">
             <h3>BUSCAR</h3>
             <div id="search">
@@ -278,7 +280,7 @@
 
                 <h5>AUTOR</h5>
                 <p>&copy; Victor Robles - Curso CSS Master</p>
-                <p>Alumno: <a href="https://github.com/sebalaca">Sebastian Lacabaratz</a></p>
+                <p class="alumni">Alumno: <a href="https://github.com/sebalaca">Sebastian Lacabaratz</a></p>
             </div>
         </div>
     </footer>
